microservice/deploy/carts-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  labels:
    app: carts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
    spec:
      containers:
      - name: carts
        image: abdul125/carts
        ports:
         - containerPort: 80
