microservice/deploy/orders-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    app: orders-db
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: orders-db
