microservice/deploy/user-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: user
